--- a/PhotoSpotter/Base.lproj/Main.storyboard
+++ b/PhotoSpotter/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="ipad12_9rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -466,7 +466,7 @@
                                     <constraint firstItem="P8R-Ia-68G" firstAttribute="top" secondItem="6ir-dF-OFO" secondAttribute="top" constant="20" id="mep-KH-rNX"/>
                                     <constraint firstItem="eEB-0J-bVb" firstAttribute="top" secondItem="6ir-dF-OFO" secondAttribute="top" id="nXS-HL-XvF"/>
                                     <constraint firstItem="GtQ-2N-JhX" firstAttribute="leading" secondItem="6ir-dF-OFO" secondAttribute="leading" id="p1q-np-ZeJ"/>
-                                    <constraint firstItem="GtQ-2N-JhX" firstAttribute="top" secondItem="myE-BO-9Y4" secondAttribute="bottom" constant="20" id="yBU-Av-Lv7"/>
+                                    <constraint firstItem="GtQ-2N-JhX" firstAttribute="top" secondItem="myE-BO-9Y4" secondAttribute="bottom" constant="20" id="yBU-Av-Lv7" userLabel="DatePickerBottomConstraint"/>
                                     <constraint firstItem="dt3-lS-mdA" firstAttribute="leading" secondItem="6ir-dF-OFO" secondAttribute="leading" constant="20" id="yg6-RD-QTJ"/>
                                 </constraints>
                             </view>
@@ -672,6 +672,8 @@
                         <outlet property="navBarItem" destination="MAW-bR-kSY" id="PtB-Ao-ry1"/>
                         <outlet property="orientationButton" destination="oIT-Ve-K0R" id="jMp-v7-FTy"/>
                         <outlet property="orientationLabel" destination="7lK-US-IIb" id="hKE-cc-amE"/>
+                        <outlet property="pickerTop" destination="yBU-Av-Lv7" id="OG8-bi-1Xw"/>
+                        <outlet property="pickerTopConstraint" destination="yBU-Av-Lv7" id="3Es-oP-is0"/>
                         <outlet property="placeButton" destination="xp3-1c-EGH" id="RKG-WR-YCE"/>
                         <outlet property="routeInfoView" destination="YQT-CV-hyc" id="58b-Fq-8OR"/>
                         <outlet property="routingButton" destination="f21-dR-J3l" id="o0a-GA-sKP"/>
