--- a/PhotoSpotter/Base.lproj/Main.storyboard
+++ b/PhotoSpotter/Base.lproj/Main.storyboard
@@ -2103,11 +2103,11 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="LcV-PU-V2T"/>
-        <segue reference="Tqb-kX-mOs"/>
-        <segue reference="q1Q-0p-CtR"/>
+        <segue reference="pUo-dC-VJ5"/>
+        <segue reference="xGg-4x-7zw"/>
+        <segue reference="Gpb-NS-Hlh"/>
         <segue reference="6Gl-Tl-cdW"/>
-        <segue reference="Yg0-Ub-0Bk"/>
+        <segue reference="8Mg-Zc-6jN"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="arrow.up.and.down.circle" catalog="system" width="128" height="121"/>
